# sphinx-polyversion

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  swp.json
.github/: release.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish-docs.yml
docs/: poly.py
docs/sphinx/: alternatives.rst  conf.py  index.rst
docs/sphinx/_templates/: custom-base-template.rst  custom-class-template.rst  custom-module-template.rst  versioning.html
docs/sphinx/_templates/components/: edit-this-page.html
docs/sphinx/_templates/sidebar/: brand.html
docs/sphinx/api/: sphinx_polyversion.rst
docs/sphinx/development/: roadmap.rst
docs/sphinx/guide/: getting-started.rst  installation.rst
docs/templates/: index.html
sphinx_polyversion/: __init__.py  __main__.py  api.py  builder.py  driver.py  environment.py  git.py  json.py  log.py  main.py  pyvenv.py  setuptools_scm.py  setuptools_scm_support.py  sphinx.py  utils.py  vcs.py
tests/: __init__.py  test_api.py  test_git.py  test_json.py  test_pyvenv.py  test_setuptools_scm.py  test_setuptools_scm_integration.py  test_setuptools_scm_support.py  test_sphinx.py  test_utils.py
