[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sphinx_polyversion"
version = "0.5.0"
description = "Build multiple versions of your sphinx docs and merge them into one website."
authors = ["yfprojects <real-yfprojects@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/real-yfprojects/sphinx-polyversion"
keywords = ["utils", "documentation", "sphinx"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Intended Audience :: Developers",
]


[tool.poetry.dependencies]
virtualenv = { version = ">=20", optional = true }
python     = ">=3.8"
jinja2     = { version = ">=3", optional = true }

[tool.poetry.extras]
virtualenv = ["virtualenv"]
jinja      = ["jinja2"]

[tool.poetry.scripts]
sphinx-polyversion = "sphinx_polyversion.main:main"

[tool.poetry.group.lint.dependencies]
mypy  = "^1.3.0"
ruff  = "^0.0.272"
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.black]
target-version = ['py38']

[tool.mypy]
files              = "sphinx_polyversion/**.py"
python_version     = "3.8"
strict             = true
allow_redefinition = true
exclude            = ["^tests"]

[[tool.mypy.overrides]]
module                 = "virtualenv.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"

select = [
    "T",     # flake8-print
    "I",     # isort
    "F",     # pyflakes
    "D",     # pydocstyle
    "E",     # pycodestyle
    "W",
    "FLY",   # flynt
    "RUF",   # ruff
    "PL",    # pylint
    "TCH",   # flake8-type-checking
    "ASYNC", # flake8-async
    "A",     # flake8-builtins
    "C",     # flake8-comprehensions
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "G",     # flake8-implicit-str-concat
    "INP",   # flake8-no-pep420
    "PT",    # flake8-pytest-style
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "TD",    # flake8-todos
    "PYI",   # flake8-pyi - lints .pyi type stubs
    "ERA",   # ERA
]
unfixable = ['ERA']

ignore = [
    # pydocstyle
    # "D202", # no-blank-line-after-function
    "D203", # one-blank-line-before-class
    # "D205", # blank-line-after-summary
    "D212", # multi-line-summary-first-line
    # "D401", # non-imperative-mood
    # pycodestyle
    "E501", # line-too-long
    # pylint
    "PLR0913", # too-many-arguments
    # "PLR0912", # too-many-branches
    # "PLR0915", # too-many-statements
    # flake8-todos
    "TD002", # missing author
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed or of form `dummyN`.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|dummy\\d*)$"

[tool.ruff.pylint]
# Allow more arguments for complexity check
max-args = 8

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
